# CIS520_Project2

./: process_scheduling (2).c  tests.cpp
312_cs560/hw2/src/: process_scheduling.c
312_cs560/hw2/test/: tests.cpp
SRTF-1/: process_scheduling.c  tests.cpp
Shortest Job First - 2/: process_scheduling.c  tests.cpp
Shortest Job First-1/: process_scheduling.c  tests.cpp
Updated FCFS/: process_scheduling.c  tests.cpp
p2/: process_scheduling (1).c  process_scheduling.c
p2 (1)/hw2/: CMakeLists.txt
p2 (1)/hw2/src/: process_scheduling.c
p2 (1)/hw2/test/: tests.cpp
p2/hw2/: CMakeLists.txt  readme.md
p2/hw2/src/: analysis.c  process_scheduling.c
p2/hw2/test/: tests.cpp
p2_3_3_22/hw2/src/: analysis.c  process_scheduling.c
p2_3_3_22/hw2/test/: tests.cpp
